--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "skrollr": "^0.6.26"
   }
 }
